--- a/platform/RemotingNG/doc/00152-RemotingNGTutorialPart3.page
+++ b/platform/RemotingNG/doc/00152-RemotingNGTutorialPart3.page
@@ -270,11 +270,11 @@ is shown below:
         <RemoteGen>
             <files>
                 <include>
-                    ${POCO_BASE}/RemotingNG/include/Poco/RemotingNG/RemoteObject.h
-                    ${POCO_BASE}/RemotingNG/include/Poco/RemotingNG/Proxy.h
-                    ${POCO_BASE}/RemotingNG/include/Poco/RemotingNG/Skeleton.h
                     include/CheckVat/CheckVatService.h
                 </include>
+                <include-paths>
+                    include
+                </include-paths>
             </files>
             <output>
                 <mode>client</mode>
@@ -285,41 +285,6 @@ is shown below:
                 <flatIncludes>false</flatIncludes>
                 <timestamps>false</timestamps>
             </output>
-            <compiler id="gcc">
-                <exec>g++</exec>
-                <options>
-                    -I${POCO_BASE}/Foundation/include
-                    -I${POCO_BASE}/RemotingNG/include
-                    -I./include
-                    -E
-                    -C
-                    -o%.i
-                </options>
-            </compiler>
-            <compiler id="clang">
-                <exec>clang++</exec>
-                <options>
-                    -I${POCO_BASE}/Foundation/include
-                    -I${POCO_BASE}/RemotingNG/include
-                    -I./include
-                    -E
-                    -C
-                    -xc++
-                    -o%.i
-                </options>
-            </compiler>
-            <compiler id="msvc">
-                <exec>cl</exec>
-                <options>
-                    /I "${POCO_BASE}\Foundation\include"
-                    /I "${POCO_BASE}\RemotingNG\include"
-                    /I ".\include"
-                    /nologo
-                    /C
-                    /P
-                    /TP
-                </options>
-            </compiler>
         </RemoteGen>
     </AppConfig>
 ----
